--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "version":2,
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],   
-    "routes": [{"src": "/(.*)","dest":"/"}],
-    "rewrites": [{ "source": "/chat/(.*)", "destination": "/chat" }]    
+    "routes": [{"src": "/(.*)","dest":"/"}]
 }
