--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,21 @@
 {
-    "version":2,
-    "builds": [{"src": "./index.js", "use": "@vercel/node"}],   
-    "rewrites": [{ "source": "/chat/(.*)", "destination": "/chat" }]    
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.js", 
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)", 
+            "dest": "/index.js"
+        }
+    ],
+    "env": {
+        "OPENAI_API_KEY": "@openai_api_key",
+        "ELEVEN_LABS_API_KEY": "@eleven_labs_api_key",
+        "PORT": "3001"
+    },
+    "regions": ["all"]
 }
