--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./index.js", 
-            "use": "@vercel/node"
-        }
+      {
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)", 
-            "dest": "/index.js"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "/index.js"
+      }
+    ],
+    "env": {
+      "OPENAI_API_KEY": "@openai_api_key",
+      "ELEVEN_LABS_API_KEY": "@eleven_labs_api_key",
+      "PORT": "@port"
+    }
+  }
