--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "elevenlabs-node": "^1.2.0",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
-    "openai": "^4.11.1"
+    "openai": "^4.11.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
